# PLATFORMA-MULTIAGENTOWA-HYPERFLOW-CORE

./: README.md
Platforma agentowa/hf_fix/: .devfile.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .replit  FLY_DEPLOYMENT.md  README.md  build-targets.json  docker-compose.yml  fly.hyperflow-api.toml  fly.hyperflow-core.toml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  skills-lock.json
Platforma agentowa/hf_fix/.agents/: agent_assets_metadata.toml
Platforma agentowa/hf_fix/.github/workflows/: ci-python-core.yml  ci-ts-shell.yml
Platforma agentowa/hf_fix/artifacts/: hyperflow-core.pytest_cache-v-cache-lastfailed  hyperflow-core.pytest_cache-v-cache-nodeids
Platforma agentowa/hf_fix/artifacts/api-server/: Dockerfile  artifact.manifest.json  build.mjs  package.json
Platforma agentowa/hf_fix/artifacts/api-server/src/: app.ts  index.ts
Platforma agentowa/hf_fix/artifacts/api-server/tests/: auth-boundary.test.mjs  conftest.py  (+38 more)
Platforma agentowa/hf_fix/artifacts/hyperflow-core/: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  artifact.manifest.json  main.py  openrouter.py  pyproject.toml  requirements-ci.txt
Platforma agentowa/hf_fix/artifacts/mockup-sandbox/: artifact.manifest.json
Platforma agentowa/hf_fix/artifacts/operator-panel/: Dockerfile  artifact.manifest.json  docker-entrypoint.sh  index.html  nginx.conf  nginx.conf.template  package.json  vite.config.ts
Platforma agentowa/hf_fix/core/contracts/: __init__.py  export_schemas.py  models.py  pyproject.toml  runtime-authority.json
Platforma agentowa/hf_fix/docs/: AGENT_PLATFORM_ARCHITECTURE.md  ARCHITECTURE_CANON.md  AUTHORITY_BOUNDARY.md  CODE_REVIEW_microfix_patched.md  DEFERRED_API.md  DOCKER.md  EXECUTION_SPINE.md  LOCAL_DEV.md  NEMERGED_OWNERSHIP_INVENTORY.md  PLATFORM_SHELL_FIX.md  TS_ROUTE_PYTHON_COMPAT_MAP.md
Platforma agentowa/hf_fix/docs/docs/: ARCHITECTURE_CANON.md  AUTHORITY_BOUNDARY.md  DEFERRED_API.md  EXECUTION_SPINE.md  GITHUB_PUSH_VERIFICATION.md  HYPERFLOW_MULTIAGENTS_PUSH.md  NEMERGED_OWNERSHIP_INVENTORY.md  TS_ROUTE_PYTHON_COMPAT_MAP.md  orchestration-patch-note.md  schema.sql
Platforma agentowa/hf_fix/docs/migrations/: 0001_approvals_pending_unique.sql
Platforma agentowa/hf_fix/lib/api-spec/: openapi.yaml
Platforma agentowa/hf_fix/scripts/: generate_provenance_manifest.py  generate_uv_sbom.py  package.json  select_artifacts.py  smoke-test.sh
Platforma agentowa/hf_fix/scripts/src/: db-backup.ts  db-cleanup.ts  db-restore.ts
(+120 files in other folders)
