[project]
name = "hyperflow-monorepo"
version = "0.1.0"
description = "Hyperflow monorepo bootstrap and local launcher"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.3",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "uvicorn[standard]==0.44.0",
]
