[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperflow"
dynamic = ["version"]
description = "Hyperflow Python runtime core — EDDE orchestrator, MPS controller, emoji-aware intent resolver"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ai", "orchestration", "edde", "mps", "hyperflow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",
    "pydantic==2.12.5",
    "httpx==0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]
build = [
    "build==1.2.2.post1",
    "twine==6.1.0",
]

[project.scripts]
hyperflow = "hyperflow.cli:main"

[tool.setuptools.dynamic]
version = {attr = "hyperflow.__version__"}

[tool.setuptools]
py-modules = ["main", "openrouter"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hyperflow*", "language*", "control*", "engine*", "memory*", "scanner*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
