[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperflow-contracts"
version = "1.0.0"
description = "Hyperflow shared Pydantic v2 contract models"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
